Fixed bug with state, added alert for failed shift

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,7 @@
     color: red;
     font-weight: bold;
 }
+
+.label {
+    padding-top: 10px;
+}
